@@ -440,6 +440,7 @@ Version 2.7      2012-nn-nn
 Bugfixes (posix):
 
 - [Patch 3462364] Fix: NameError: global name 'base' is not defined
+- add platform specific method: outWaiting
 
 Bugfixes (win32):
 
